# ChangeLog for net-im/curphoo
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/curphoo/Attic/ChangeLog,v 1.2 2003/10/10 11:29:32 vapier Exp $

*curphoo-0.3.7-r1 (08 Oct 2003)

  08 Oct 2003; Heinrich Wendel <lanius@gentoo.org> curphoo-0.03.2.ebuild,
  curphoo-0.3.5.ebuild, curphoo-0.3.7-r1.ebuild, curphoo-0.3.7.ebuild,
  curphoo-0.3.9.ebuild, files/curphoo.sh, files/encodep.py-gentoo.patch:
  moved from net-misc to net-im

*curphoo-0.3.9 (28 Sep 2003)

  28 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> curphoo-0.3.9.ebuild:
  new upstream

*curphoo-0.3.7-r1 (25 Sep 2003)

  25 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org> curphoo-0.3.7-r1.ebuild,
  files/encodep.py-gentoo.patch:
  patch for proto change

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*curphoo-0.3.7 (01 Oct 2002)

  01 Oct 2002; Brad Cowan <bcowan@gentoo.org> curphoo-0.3.7.ebuild,
  ChangeLog, files/digest-curphoo-0.3.7 :
  
  Version bump.

*curphoo-0.3.5 (6 Sep 2002)

  6 Sep 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  curphoo-0.3.5.ebuild, files/digest-curphoo-0.3.5, files/curphoo.sh :

  Minor version update and fix for terminal setting.

*curphoo-0.03.2 (04 Aug 2002)

  04 Aug 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog, 
  curphoo-0.03.2.ebuild, files/digest-curphoo-0.03.2, files/curphoo.sh:

  Initial import.
