@@ -1,13 +1,13 @@
-MD5 bf702c387489441cb06e3c1239d0ba29 files/encodep.py-gentoo.patch 4290
+MD5 ad3f7709765a1c6deb903d392073f1ae ChangeLog 1550
+MD5 9afba87d94b49f71a9ed78db496471fa curphoo-0.03.2.ebuild 959
+MD5 15f98bdcf9451c353f55dcfb775c84c9 curphoo-0.3.5.ebuild 913
+MD5 4d733a4445b565045c6d9a41b8a81bfa curphoo-0.3.7-r1.ebuild 952
+MD5 d55127998a215269215fd9ba2b6a3804 curphoo-0.3.7.ebuild 905
+MD5 7c0640763d5494654bc02467d9d35a41 curphoo-0.3.9.ebuild 949
+MD5 764acbdbc75119813fd516d6132eb61f files/curphoo.sh 108
+MD5 3b04b3a217cdf5e53eb3387d8253094c files/digest-curphoo-0.03.2 66
 MD5 61bb02be86a70981da3d3cf3e61d70db files/digest-curphoo-0.3.5 65
 MD5 7f42d8dc52c330035bee1818bc2b1be7 files/digest-curphoo-0.3.7 65
-MD5 6f0a2c26f1e8249c199f0029a6d1476f files/digest-curphoo-0.3.9 64
 MD5 7f42d8dc52c330035bee1818bc2b1be7 files/digest-curphoo-0.3.7-r1 65
-MD5 3b04b3a217cdf5e53eb3387d8253094c files/digest-curphoo-0.03.2 66
-MD5 764acbdbc75119813fd516d6132eb61f files/curphoo.sh 108
-MD5 15f98bdcf9451c353f55dcfb775c84c9 curphoo-0.3.5.ebuild 913
-MD5 9afba87d94b49f71a9ed78db496471fa curphoo-0.03.2.ebuild 959
-MD5 d55127998a215269215fd9ba2b6a3804 curphoo-0.3.7.ebuild 905
-MD5 b9b5b55504ac3c866b3c20fd81110601 curphoo-0.3.9.ebuild 981
-MD5 4d733a4445b565045c6d9a41b8a81bfa curphoo-0.3.7-r1.ebuild 952
-MD5 70f0e6787a65988d02750ac0345b866d ChangeLog 1432
+MD5 6f0a2c26f1e8249c199f0029a6d1476f files/digest-curphoo-0.3.9 64
+MD5 bf702c387489441cb06e3c1239d0ba29 files/encodep.py-gentoo.patch 4290
