@@ -1,6 +1,9 @@
 # ChangeLog for net-im/curphoo
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/curphoo/Attic/ChangeLog,v 1.2 2003/10/10 11:29:32 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/curphoo/Attic/ChangeLog,v 1.3 2003/12/12 02:25:16 mkennedy Exp $
+
+  11 Dec 2003; <mkennedy@gentoo.org> curphoo-0.3.9.ebuild:
+  removed old, obsolete homepage url to avoid confusion
 
 *curphoo-0.3.7-r1 (08 Oct 2003)
 
